--- a/bundles/org.eclipselabs.team.ui.psf.editor/plugin.xml
+++ b/bundles/org.eclipselabs.team.ui.psf.editor/plugin.xml
@@ -22,5 +22,21 @@
             id="org.eclipselabs.team.ui.psf.editor.wizards.ProjectSetImportWizard">
       </wizard>
    </extension>
+   <extension
+         point="org.eclipse.core.runtime.adapters">
+      <factory
+            adaptableType="org.eclipselabs.team.psf.model.core.Project"
+            class="org.eclipselabs.team.ui.psf.editor.adapters.ProjectSetAdapterFactory">
+         <adapter
+               type="org.eclipse.ui.model.IWorkbenchAdapter">
+         </adapter>
+         <adapter
+               type="org.eclipse.core.resources.IResource">
+         </adapter>
+         <adapter
+               type="org.eclipse.core.resources.IProject">
+         </adapter>
+      </factory>
+   </extension>
 
 </plugin>
