--- a/bundles/org.eclipselabs.team.ui.psf.editor.updatesite/.project
+++ b/bundles/org.eclipselabs.team.ui.psf.editor.updatesite/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>org.eclipselabs.team.ui.psf.editor.updatesite</name>
+	<name>org.eclipselabs.team.psf.editor.updatesite</name>
 	<comment></comment>
 	<projects>
 	</projects>
